--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       var greetings = [ "Kahrolsun İstibdat, Yaşasın Hürriyet", 
                         "Güvendiğin padişahın, O da bir gün devrilir", 
                         "Genel Grev, Genel Direniş!", 
-                        "Kurtuluş yok tek başına, ya hep beraber ya hiçbirimiz!", 
+                        "Kurtuluş yok tek başına, ya hep beraber ya hiçbirimiz!",
+                        "EKMEK, ADALET VE ÖZGÜRLÜK İÇİN GENEL GREVE!",
                         ];
     setInterval(changeText, 4000);
 
